test/type_error/quantum_var_call.rqcpp
Qbits q[1]

procedure P():
    q()

procedure main():
    P()